--- a/nm-import/pom.xml
+++ b/nm-import/pom.xml
@@ -25,5 +25,9 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.twitter4j</groupId>
+            <artifactId>twitter4j-core</artifactId>
+        </dependency>
     </dependencies>
 </project>
